Tweak index.html files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Little Printer Publication</title>
 </head>
 <body>
-	<p>This is a Little Printer publication.</p>
-	<p><a href="http://bergcloud.com/littleprinter/">Little Printer</a></p>
+	<p>This is a <a href="http://bergcloud.com/littleprinter/">Little Printer</a> publication.</p>
+	<p><a href="sample/">View a sample of this publication.</a></p>
 </body>
 </html>
